# research-gap-analyzer-v1

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  celery_app.py  check_imports.py  config.py  database.py  dependencies.py  main.py  pyproject.toml  requirements.txt  research_gap.db  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 418b79e71fe4_initial_postgres_schema.py  5f2759f34848_init.py  9707995f176b_replace_storage_path_with_cloud_url.py
backend/core/: llm.py
backend/models/: analyzer.py  api_models.py  chunk.py  merger.py  metadata.py  paper.py  planner.py  query.py  report.py  web.py
backend/modules/: cache.py  chunking.py  cloud_storage.py  context_merger.py  embeddings_service.py  hybrid_ranker.py  llm_layer.py  local_rag.py  metadata_search.py  paper_search.py  planner.py  query_understanding.py  report_exporter.py  research_analyzer.py  vector_search.py  web_search.py
backend/modules/vector_db/: base.py  chroma_repo.py  keyword_repo.py  qdrant_repo.py
backend/routers/: analyze.py  gaps.py  papers.py  projects.py  reports.py  settings.py  status.py  upload.py
backend/services/: health_service.py
backend/temp/: 12e3d045-ba1a-48f8-beda-d8cc5d3d6d69.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/components/: MobileHeader.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useAnalysisStore.ts
(+15 files in other folders)
